Uploaded image for project: 'Core Server'
  1. Core Server
  2. SERVER-98030

Fix race in NetworkInterfaceMock cancellation logic

    • Type: Icon: Bug Bug
    • Resolution: Fixed
    • Priority: Icon: Major - P3 Major - P3
    • 8.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Networking & Observability
    • Fully Compatible
    • ALL
    • Networking & Obs 2024-12-09, Networking & Obs 2024-12-23
    • 200

      When scheduling an operation, the NetworkInterfaceMock briefly gives up the lock in case the cancellation future executes inline. However, this can lead to operations getting scheduled interleaving with their cancellation, which may make the continuations run in an unexpected place for tests. Hold the lock throughout enqueuing an operation instead of letting it go.

            Assignee:
            erin.mcnulty@mongodb.com Erin McNulty
            Reporter:
            erin.mcnulty@mongodb.com Erin McNulty
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: