SERVER-98030: Added drain for outstanding requests in NetworkInterfaceMock (#30104)

GitOrigin-RevId: 82e0ef9a9aeef12f57cad3820c27c839f9e059fe